--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.25.0
-pandas
-numpy
-scikit-learn
-joblib
-matplotlib
-seaborn
+pandas==1.5.3
+numpy==1.23.5
+scikit-learn==1.2.2
+joblib==1.2.0
+matplotlib==3.6.3
+seaborn==0.12.2
